--- a/citationCategorizer.html
+++ b/citationCategorizer.html
@@ -1,10 +1,18 @@
+<!--
+// PROCEDURE:
+// mongod
+// node index.js (server)
+// when it's listening, go to 127.0.0.1:3000
+--!>
+
 <!doctype html>
 <html>
   <head>
     <title>Citation Categorizer</title>
     <style>
       #articleListHolder { width: 15%; position: absolute; top: 0; bottom: 0; overflow: auto; }
-      #articleDataHolder { width: 80%; position: absolute; top: 0; bottom: 0; right: 0; overflow: auto; }
+      #articleDataHolder { width: 80%; height: 50%; position: absolute; top: 0; bottom: 0; right: 0; overflow: auto; }
+      #buttonRow { width: 80%; height: 20%; position: absolute; right: 0; bottom: 0; overflow: auto; }
 /*      * { margin: 0; padding: 0; box-sizing: border-box; }
       body { font: 13px Helvetica, Arial; }
       form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
@@ -20,6 +28,13 @@
     <div id="articleListHolder">
     </div>
     <div id="articleDataHolder">
+    </div>
+
+    <div id="buttonRow">
+        <button type="button">back (b)</button>
+        <button type="button">next (n)</button>
+        <button type="button">citation (c)</button>
+        <button type="button">text (t)</button>
     </div>
 <!--
     <ul id="messages"></ul>
@@ -37,7 +52,9 @@
         <% }); %></ul>");
       var articleDataTemplate = _.template(
         "<h2><%= article.title %></h2> \
-        <p><%- article.articleText %></p>"
+        <p><a href=\"<%= article.URL %>\" target=\"_blank\"><%= article.URL %></a></p> \
+        <p><%- article.articleText %></p> \
+        "
       );        
       var socket = io();
       socket.on('update article list', function(articles) {
